--- a/style.css
+++ b/style.css
@@ -47,3 +47,26 @@ li > img {
 .card {
     margin: 5px;
 }
+#nameNowTemperatureDiv {
+    width: 30vw;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 2fr 1fr;
+}
+#cityNameTitle{
+    grid-column: 1 / 3;
+    text-align: start;
+    margin-left: 3vw;
+    margin-top: 2vh;
+}
+#tempNowSpan {
+    align-self: start;
+    margin-bottom: 2vh;
+    margin-left: 3vw;   
+}
+
+#tempNowIconSpan {
+    display: inline;
+    display: flex;
+    justify-content: center;
+}
